--- a/webdevelopment/nav.css
+++ b/webdevelopment/nav.css
@@ -1,21 +1,21 @@
 nav{
     margin:0;
-    padding:15px 15px;
+    padding:5px 15px;
     justify-content: space-between;
     align-items: center;
     font-size: x-large;
     display: flex;
-    right:0;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 nav a{
-    color: #777;
+    color: white;
     text-decoration: none;
-    padding:20px;
+    padding:10px 20px;
 }
-nav a:hover {
+nav li a:hover {
 background-color:#Fb6ddc;
 color: white;
-border: 2px solid pink
+border: 2px solid pink;
 }
 nav ul{
     list-style-type: none;
@@ -24,16 +24,38 @@ nav ul{
     padding:0;
     justify-content: flex-end;
 }
-nav li{
+nav ul li{
+    position: relative;
     margin: 0 10px;
-    float: right;
 }
-.klogo{
+
+.klogo a {
+    color: #777;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+.klogo img{
     width: 60px;
     height: auto;
-    float:inline-start;
-    justify-content: flex-start;
-    top:0;
-    left:0;
+    margin-right: 10px;
+}
 
+.navName{
+    position: relative;
+    background-color: #Fb6ddc;
+    padding: 15px;
+    
+}
+.navMenu{
+    display: none;
+    position: absolute;
+    background-color: #Fb6ddc;
+    padding: 10px;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+}
+.nM:hover .navMenu{
+    display: block;
 }
